--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 .navbar-links {
   display: flex;
   gap: 15px;
-  margin-left: auto; 
+  margin-left: auto;
 }
 
 .navbar-links a {
@@ -25,38 +25,42 @@
 }
 
 section.container.row {
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 
 section.container.row .card {
-    display: flex;
-    align-items: center;
-    padding: 0px;
-    margin: 10px;
-    border: 3px solid #224952;
-    box-shadow: 10px 5px 5px #224952;
+  display: flex;
+  align-items: center;
+  padding: 0px;
+  margin: 10px;
+  border: 3px solid #224952;
+  box-shadow: 10px 5px 5px #224952;
 }
 
 .card-header:first-child {
-    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
-    width: 100%;
-    font-size: 25px;
+  border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+  width: 100%;
+  font-size: 25px;
 }
 
 div#results {
-    /* display: contents; */
-    display: inline-block;
-    position: relative;
-    bottom: 185px;
-    left: 15px;
+  /* display: contents; */
+  display: inline-block;
+  position: relative;
+  bottom: 185px;
+  left: 15px;
 }
 
 .card-body {
-    -webkit-box-flex: 1;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto; 
-    padding: 1.25rem;
-    width: 100%;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem;
+  width: 100%;
+}
+
+#result-entrys {
+  padding-top: 150px;
 }
