added css to index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@
   padding: 26px;
 }
 
-input[type=text] {
+input[type="text"] {
   width: 100%;
   margin: 6px 0;
   box-sizing: border-box;
@@ -104,4 +104,16 @@ div#results {
   padding-left: 40px;
   padding-top: 25px;
   padding-right: 25px;
+}
+#main-index {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  margin: 0;
+}
+
+#welcome {
+  text-align: center;
+  font-size: large;
 }
