--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@
   padding: 26px;
 }
 
+#welcome button {
+  margin: 5px;
+}
+
 input[type="text"] {
   width: 100%;
   margin: 6px 0;
@@ -59,6 +63,7 @@ div#search-form {
   border: 3px solid #1e3a8a;
   box-shadow: 10px 10px 15px #1e3a8a;
   padding: 0px;
+  height: 367px;
 }
 
 section.container.row {
@@ -84,36 +89,78 @@ div#results {
   border-radius: 0;
 }
 
-#result-entrys {
-  padding-top: 200px;
-}
-
 #about-bq,
 #about-h2 {
-  padding-left: 40px;
-  padding-top: 25px;
-  padding-right: 25px;
+  padding: 25px 25px 0 40px;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
 }
 
-#result-entrys {
-  padding-top: 200px;
+#about-bq button {
+  margin: 10px;
 }
 
-#about-bq,
-#about-h2 {
-  padding-left: 40px;
-  padding-top: 25px;
-  padding-right: 25px;
-}
 #main-index {
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 80vh;
   margin: 0;
+  flex-direction: column;
+  height: 900px;
+  background-image: url("../images/space-books.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.main-text {
+  color: black;
+  font-size: 30px;
+  background-color: rgba(255, 255, 255, 0.451);
+  width: 75%;
+  border-radius: 6px;
+  display: flex;
+}
+
+#random-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#random-list button {
+  margin: 5px;
+}
+
+#random-list ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.random-books {
+  color: black;
+  font-size: 21px;
+  background-color: rgba(255, 255, 255, 0.451);
+  border-radius: 6px;
 }
 
 #welcome {
   text-align: center;
   font-size: large;
+  margin-top: 100px; 
+}
+
+#book-cover img {
+  width: 55%;
+}
+
+div#book-entry {
+ padding: 5px 5px 15px 5px;
+}
+
+.picture-inspect {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding-top: 5px;
 }
